config.hin 	* jconfig.cfg: Rename as... 	* jconfig.hin: this. 	This avoids trigerring Make rules in *.cfg, and is 	more traditional. 	* configure.ac: Adjust.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@89 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/configure.ac
+++ b/configure.ac
@@ -116,7 +116,7 @@ AC_SUBST([SYSDEPMEM])
 
 AC_PROG_LIBTOOL
 
-AC_CONFIG_HEADER([jconfig.h:jconfig.cfg])
+AC_CONFIG_HEADERS([jconfig.h:jconfig.hin])
 AC_CONFIG_FILES([Makefile])
 
 AC_OUTPUT
