More adjustments to AX_PREFIX_CONFIG_H 	* Makefile.am: Include explicit rules to create jconfig.h. 	* wrtarga.c, configure.ac, jcphuff.c, wrjpgcom.c, jinclude.h, 	* jpegint.h, rdrle.c, rdppm.c, ckconfig.c, rdtarga.c, 	* install.doc, djpeg.c, wrrle.c, rdgif.c, cdjpeg.c, cdjpeg.h, 	* rdbmp.c, wrppm.c, jidctfst.c, wrgif.c, usage.doc, wrbmp.c, 	* jmemname.c, jmemdos.c, rdjpgcom.c, cderror.h, jpegtran.c, 	* templates/jconfig.vms, templates/jconfig.st, 	* templates/jconfig.bcc, templates/jconfig.dj, 	* templates/jconfig.mac, templates/jconfig.manx, 	* templates/jconfig.doc, templates/jconfig.vc, 	* templates/jconfig.mc6, templates/jconfig.sas, 	* templates/jconfig.wat, cjpeg.c (RIGHT_SHIFT_IS_UNSIGNED) 	(BMP_SUPPORTED, GIF_SUPPORTED, PPM_SUPPORTED, RLS_SUPPORTED) 	(TARGA_SUPPORTED, TWO_FILE_COMMANDLINE, DONT_USE_B_MODE) 	(PROGRESS_REPORT): Now prefixed by LIBJPEG_.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@148 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ libjpeg_la_SOURCES += \
 libjpeg_la_LIBADD = \
 	$(SYSDEPMEM)
 libjpeg_la_DEPENDENCIES = \
-	$(SYSDEPMEM)
+	$(SYSDEPMEM) jconfig.h
 
 # memmgr back ends: compile only one of these into a working library
 SYSDEPSOURCES = jmemansi.c jmemname.c jmemnobs.c jmemdos.c jmemmac.c
@@ -36,6 +36,19 @@ SOURCES = $(LIBSOURCES) $(SYSDEPSOURCES) $(APPSOURCES)
 # files included by source files
 dist_include_HEADERS = jpeglib.h jmorecfg.h jerror.h
 nodist_include_HEADERS = jconfig.h
+
+# jconfig.h.  The technique comes from the handling of config.h by Automake.
+jconfig.h: jconfig.stamp
+	@if test ! -f $@; then \
+	  rm -f jconfig.stamp; \
+	  $(MAKE) $(AM_MAKEFLAGS) jconfig.stamp; \
+	else :; fi
+
+jconfig.stamp: $(srcdir)/config.hin $(top_builddir)/config.status
+	@rm -f $@
+	cd $(top_builddir) && $(SHELL) ./config.status jconfig.h
+	@touch $@
+
 
 # documentation, test, and support files
 DOCS = README install.doc usage.doc \
