distcheck fixes 	* Makefile.am (CLEANFILES): Remove jconfig.h related files.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@149 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,6 +48,7 @@ jconfig.stamp: $(srcdir)/config.hin $(top_builddir)/config.status
 	@rm -f $@
 	cd $(top_builddir) && $(SHELL) ./config.status jconfig.h
 	@touch $@
+CLEANFILES = _configs.sed jconfig.h jconfig.stamp
 
 
 # documentation, test, and support files
@@ -113,7 +114,7 @@ check-local: cjpeg djpeg jpegtran
 	cmp $(srcdir)/testimg.ppm testoutp.ppm
 	cmp $(srcdir)/testimgp.jpg testoutp.jpg
 	cmp $(srcdir)/testorig.jpg testoutt.jpg
-CLEANFILES = testout*
+CLEANFILES += testout*
 else
 EXTRA_PROGRAMS = $(jpeg_programs)
 endif
