vc80.pdb 	* Makefile.am (CLEANFILES): Add it.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@423 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,7 +43,7 @@ jconfig.h: config.h
 	cd $(top_builddir) && $(SHELL) ./config.status jconfig.h
 	@touch $@
 
-CLEANFILES = _configs.sed jconfig.h
+CLEANFILES = _configs.sed jconfig.h vc80.pdb
 
 
 # documentation, test, and support files
