* Makefile.am (CLEANFILES): Add *.exe.intermediate.manifest.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@682 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,7 +45,7 @@ jconfig.h: config.h
 
 CLEANFILES = _configs.sed jconfig.h
 # Files created by VC++.
-CLEANFILES += vc80.pdb *.exe.manifest
+CLEANFILES += vc80.pdb *.exe.manifest *.exe.intermediate.manifest
 
 
 # documentation, test, and support files
