--disable-library 	* configure.ac: Support it. 	* Makefile.am: Use it.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@721 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,11 @@
 ACLOCAL_AMFLAGS = -I build-aux
 
 # source files: JPEG library proper
+if INSTALL_LIBRARY
 lib_LTLIBRARIES = libjpeg.la
+else
+noinst_LTLIBRARIES = libjpeg.la
+end
 
 libjpeg_la_SOURCES = \
 	jcapimin.c jcapistd.c jccoefct.c jccolor.c jcdctmgr.c jchuff.c \
