--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,12 @@ AC_ARG_ENABLE([programs],
 	      [], [enable_programs=yes])
 AM_CONDITIONAL([PROGRAMS], [test x"$enable_programs" == xyes])
 
+AC_ARG_ENABLE([library],
+	      [AC_HELP_STRING([--disable-library],
+			      [just install the programs, not the library])],
+	      [], [enable_library=yes])
+AM_CONDITIONAL([INSTALL_LIBRARY], [test x"$enable_library" == xyes])
+
 
 AC_PROG_CC
 AC_CHECK_TYPES([unsigned char, unsigned short])
