Typo 	* Makefile.am: Fix endif.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@722 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ if INSTALL_LIBRARY
 lib_LTLIBRARIES = libjpeg.la
 else
 noinst_LTLIBRARIES = libjpeg.la
-end
+endif
 
 libjpeg_la_SOURCES = \
 	jcapimin.c jcapistd.c jccoefct.c jccolor.c jcdctmgr.c jchuff.c \
