Do not build dynamic version of libjpeg. 	* Makefile.am: Here.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@726 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ libjpeg_la_LIBADD = \
 	$(SYSDEPMEM)
 libjpeg_la_DEPENDENCIES = \
 	$(SYSDEPMEM) jconfig.h
+libjpeg_la_LDFLAGS = -all-static
 
 # memmgr back ends: compile only one of these into a working library
 SYSDEPSOURCES = jmemansi.c jmemname.c jmemnobs.c jmemdos.c jmemmac.c
