Help the creation of shared libs on Windows.
	* Makefile.am (libjpeg_la_LDFLAGS): Add -no-undefined.

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,7 @@ libjpeg_la_SOURCES = \
 libjpeg_la_SOURCES += \
 	jchuff.h jdhuff.h jdct.h jerror.h jinclude.h jmemsys.h jmorecfg.h \
         jpegint.h jpeglib.h jversion.h cdjpeg.h cderror.h transupp.h
+libjpeg_la_LDFLAGS = -no-undefined
 libjpeg_la_LIBADD = \
 	$(SYSDEPMEM)
 libjpeg_la_DEPENDENCIES = \
