--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,8 @@ libjpeg_la_SOURCES = \
 libjpeg_la_SOURCES += \
   jchuff.h jdhuff.h jdct.h jerror.h jinclude.h jmemsys.h jmorecfg.h \
   jpegint.h jpeglib.h jversion.h cdjpeg.h cderror.h transupp.h
+# Export the shared library symbols.
+libjpeg_la_CPPFLAGS = -DBUILDING_JPEG
 libjpeg_la_LDFLAGS = -no-undefined
 libjpeg_la_LIBADD = \
   $(SYSDEPMEM)
