Workaround libtool issues.
	* build-aux/fix-libtool-la.mk: Update.
	* build-aux/urbi-win32.m4, build-aux/urbi-libtool.m4: New.
	* configure.ac: Use it.

--- a/configure.ac
+++ b/configure.ac
@@ -139,6 +139,7 @@ esac
 AC_SUBST([SYSDEPMEM])
 
 AC_PROG_LIBTOOL
+URBI_LIBTOOL
 
 AC_CONFIG_HEADERS([config.h:config.hin])
 AX_PREFIX_CONFIG_H([jconfig.h])
