--- a/configure.ac
+++ b/configure.ac
@@ -148,7 +148,7 @@ esac
 AC_SUBST([SYSDEPMEM])
 
 AC_PROG_LIBTOOL
-AC_ENABLE_STATIC([no])
+AC_DISABLE_STATIC
 URBI_LIBTOOL
 
 AC_CONFIG_HEADERS([config.h:config.hin])
