configure: use build-aux to hide aux files.
	* configure.ac: Specify the build-aux.
	(AM_INIT_AUTOMAKE): Remove no-dist, so that we can check the
	tarballs with make distcheck.
	* Makefile.am: ansi2knr is now in build-aux.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build-aux/config.sub
 build-aux/depcomp
 build-aux/install-sh
 build-aux/missing
+build-aux/ltmain.sh
 config.hin
 config.hin~
 configure
