--- a/Makefile.am
+++ b/Makefile.am
@@ -54,8 +54,8 @@ CONFIGFILES= jconfig.cfg jconfig.bcc jconfig.mc6 jconfig.dj jconfig.wat \
 CONFIGUREFILES= config.guess config.sub install-sh ltmain.sh depcomp missing
 
 # Miscellaneous support files
-OTHERFILES= jconfig.txt ckconfig.c ansi2knr.c ansi2knr.1 jmemdosa.asm \
-        libjpeg.map
+OTHERFILES= jconfig.txt ckconfig.c build-aux/ansi2knr.c	\
+        build-aux/ansi2knr.1 jmemdosa.asm libjpeg.map
 
 # Test support files
 TESTFILES= testorig.jpg testimg.ppm testimg.bmp testimg.jpg testprog.jpg \
