--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,9 @@
 
 ACLOCAL_AMFLAGS = -I build-aux/m4
 
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status libtool
+
 # Sources to build library
 LIBSOURCES = jaricom.c jcapimin.c jcapistd.c jcarith.c jccoefct.c jccolor.c \
         jcdctmgr.c jchuff.c jcinit.c jcmainct.c jcmarker.c jcmaster.c \
