build: prefer our set-up to the usual one.
	* build-aux/m4/urbi-libtool.m4: New.
	* build-aux/m4/urbi-win32.m4: New.
	* configure.ac: Use them.
	* .gitignore: Adjust.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ build-aux/depcomp
 build-aux/install-sh
 build-aux/missing
 build-aux/ltmain.sh
-build-aux/m4
+build-aux/m4/libtool.m4
+build-aux/m4/lt*.m4
 config.hin
 config.hin~
 configure
